蠢萌的 Markdown 编辑器。

--- a/my-vue-wechat/src/assets/css/common.scss
+++ b/my-vue-wechat/src/assets/css/common.scss
@@ -10,3 +10,8 @@ $top-background: linear-gradient(to bottom, #303036, #3c3b40);
 	opacity: 1;
 }
 
+.app-header {
+	opacity: 1;
+	transition: .2s all linear; 
+}
+
